--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
 pytest==8.4.1
+python-dotenv==1.1.1
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
