--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.2
 annotated-types==0.7.0
 anyio==4.9.0
 click==8.2.1
@@ -6,6 +7,8 @@ greenlet==3.2.3
 h11==0.16.0
 idna==3.10
 iniconfig==2.1.0
+Mako==1.3.10
+MarkupSafe==3.0.2
 packaging==25.0
 pluggy==1.6.0
 psycopg2-binary==2.9.10
