--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ iniconfig==2.1.0
 Mako==1.3.10
 MarkupSafe==3.0.2
 packaging==25.0
+passlib==1.7.4
 pluggy==1.6.0
 psycopg2-binary==2.9.10
 pydantic==2.11.7
