--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ h11==0.16.0
 idna==3.10
 iniconfig==2.1.0
 Mako==1.3.10
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 packaging==25.0
 passlib==1.7.4
 pluggy==1.6.0
@@ -18,9 +20,12 @@ pydantic_core==2.33.2
 Pygments==2.19.2
 pytest==8.4.1
 python-dotenv==1.1.1
+rich==14.0.0
+shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
+typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 uvicorn==0.34.3
