--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,44 @@
 alembic==1.16.2
 annotated-types==0.7.0
 anyio==4.9.0
+certifi==2025.7.9
 click==8.2.1
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.14
+fastapi-cli==0.0.8
+fastapi-cloud-cli==0.1.4
 greenlet==3.2.3
 h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
+itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+orjson==3.10.18
 packaging==25.0
 passlib==1.7.4
 pluggy==1.6.0
 psycopg2-binary==2.9.10
 pydantic==2.11.7
+pydantic-extra-types==2.10.5
+pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 pytest==8.4.1
 python-dotenv==1.1.1
 python-multipart==0.0.20
+PyYAML==6.0.2
 rich==14.0.0
+rich-toolkit==0.14.8
+rignore==0.5.1
+sentry-sdk==2.32.0
 shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.41
@@ -30,4 +46,9 @@ starlette==0.46.2
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+ujson==5.10.0
+urllib3==2.5.0
 uvicorn==0.34.3
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
