--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+aiosmtplib==4.0.1
 alembic==1.16.2
 annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.7.9
 click==8.2.1
 dnspython==2.7.0
+ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.115.14
 fastapi-cli==0.0.8
@@ -33,6 +35,7 @@ pydantic_core==2.33.2
 Pygments==2.19.2
 pytest==8.4.1
 python-dotenv==1.1.1
+python-http-client==3.3.7
 python-multipart==0.0.20
 PyYAML==6.0.2
 rich==14.0.0
@@ -40,6 +43,7 @@ rich-toolkit==0.14.8
 rignore==0.5.1
 sentry-sdk==2.32.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
@@ -52,3 +56,4 @@ uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
+Werkzeug==3.1.3
