--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ pytest==8.4.1
 python-dotenv==1.1.1
 python-http-client==3.3.7
 python-multipart==0.0.20
+python-slugify==8.0.4
 PyYAML==6.0.2
 rich==14.0.0
 rich-toolkit==0.14.8
@@ -47,6 +48,7 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
+text-unidecode==1.3
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
