--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - db-dev-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=secret
-      - POSTGRES_USER=devuser
-      - POSTGRES_DB=fastap_db
+      - POSTGRES_USER=fastkit_user
+      - POSTGRES_DB=fastkit_db
 volumes:
   db-dev-data:
