Install jwt package

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ aiosmtplib==4.0.1
 alembic==1.16.2
 annotated-types==0.7.0
 anyio==4.9.0
+bcrypt==5.0.0
 certifi==2025.7.9
+cffi==2.0.0
 click==8.2.1
+cryptography==46.0.2
 dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
@@ -28,20 +31,25 @@ packaging==25.0
 passlib==1.7.4
 pluggy==1.6.0
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pycparser==2.23
 pydantic==2.11.7
 pydantic-extra-types==2.10.5
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 pytest==8.4.1
+pytest-asyncio==1.1.0
 python-dotenv==1.1.1
 python-http-client==3.3.7
+python-jose==3.5.0
 python-multipart==0.0.20
 python-slugify==8.0.4
 PyYAML==6.0.2
 rich==14.0.0
 rich-toolkit==0.14.8
 rignore==0.5.1
+rsa==4.9.1
 sentry-sdk==2.32.0
 shellingham==1.5.4
 six==1.17.0
